[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/bone.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Bone.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="Bone" type="RigidBody2D" groups=[
"Bone",
]]
collision_layer = 14
collision_mask = 14
gravity_scale = 0.0
contacts_reported = 4
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ReturnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="." to="." method="_on_Bone_body_entered"]
[connection signal="timeout" from="ReturnTimer" to="." method="_on_ReturnTimer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
